added base members for more from glassbyte in settings and prefs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="about_us">GlassByte is a software development start-up company headquartered in Dublin, Ireland. Our small, ambitious team strives to create innovative and useful software for computing platforms.</string>
     <string name="about_us_more">For more apps or business enquiries, visit our website!\nhttp://www.glassbyte.com/</string>
 
+    <!--> Settings <-->
+    <string name="pref_key_contact">pref_key_contact</string>
+    <string name="pref_key_app_settings">pref_key_settings</string>
+
 </resources>
