--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,11 @@
     <string name="about_us_more">For more apps or business enquiries, visit our website!\nhttp://www.glassbyte.com/</string>
 
     <!--> Settings <-->
-    <string name="pref_key_contact">pref_key_contact</string>
-    <string name="pref_key_app_settings">pref_key_settings</string>
+    <string name="pref_key_contact" translatable="false">pref_key_contact</string>
+    <string name="pref_key_app_settings" translatable="false">pref_key_settings</string>
+    <string name="pref_key_language" translatable="false">pref_key_language</string>
+
+    <string name="pref_key_prefer_leap" translatable="false">pref_key_prefer_leap</string>
+    <string name="pref_key_irish" translatable="false">pref_key_irish</string>
 
 </resources>
