--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <!--> Options <-->
     <string name="action_settings">Settings</string>
 
     <!--> About Us <-->
@@ -11,6 +12,9 @@
     <string name="about_us_more">For more apps or business enquiries, visit our website!\nhttp://www.glassbyte.com/</string>
 
     <!--> Settings <-->
+    <string name="apache_title">Apache Licence</string>
+    <string name="apache_body">Copyright 2016 GlassByte Limited. Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
+
     <string name="pref_key_contact" translatable="false">pref_key_contact</string>
     <string name="pref_key_app_settings" translatable="false">pref_key_settings</string>
     <string name="pref_key_language" translatable="false">pref_key_language</string>
@@ -18,5 +22,8 @@
     <string name="pref_key_name" translatable="false">pref_key_name</string>
     <string name="pref_key_prefer_leap" translatable="false">pref_key_prefer_leap</string>
     <string name="pref_key_irish" translatable="false">pref_key_irish</string>
+
+    <!-- Miscellaneous -->
+    <string name="OK">OK</string>
 
 </resources>
