created add expenditure dialog and floating action buttons, needs implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">iompar</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <!--> Options <-->
     <string name="action_settings">Settings</string>
@@ -15,6 +13,7 @@
     <string name="apache_title">Apache Licence</string>
     <string name="apache_body">Copyright 2016 GlassByte Limited. Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
 
+    <!-- untranslatable pref keys -->
     <string name="pref_key_contact" translatable="false">pref_key_contact</string>
     <string name="pref_key_app_settings" translatable="false">pref_key_settings</string>
     <string name="pref_key_language" translatable="false">pref_key_language</string>
@@ -23,7 +22,15 @@
     <string name="pref_key_prefer_leap" translatable="false">pref_key_prefer_leap</string>
     <string name="pref_key_irish" translatable="false">pref_key_irish</string>
 
+    <!-- leap keys for expenditure management -->
+    <string name="pref_key_last_synced_balance" translatable="false">pref_key_last_synced_balance</string>
+    <string name="pref_key_curr_synced_balance" translatable="false">pref_key_curr_synced_balance</string>
+    <string name="pref_key_last_local_balance" translatable="false">pref_key_last_local_balance</string>
+    <string name="pref_key_curr_local_balance" translatable="false">pref_key_curr_local_balance</string>
+
     <!-- Miscellaneous -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="OK">OK</string>
     <string name="username">Username</string>
     <string name="leap_card_number">Leap Card Number</string>
@@ -45,4 +52,11 @@
     <string name="slide_four_title">What now?</string>
     <string name="slide_four_desc">iompar helps you track your public transport and expenditures intelligently.\n\nMonitor your spending and never miss that journey again.</string>
 
+    <!-- realtime fragment -->
+
+    <!-- manage leap fragment -->
+
+    <!-- fare calculator -->
+
+    <!-- expenditures -->
 </resources>
