--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,17 @@
     <!--> Settings <-->
     <string name="apache_title">Apache Licence</string>
     <string name="apache_body">Copyright 2016 GlassByte Limited. Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
+
+    <string name="adult">Adult</string>
+    <string name="student">Student</string>
+    <string name="child">Child</string>
+    <string name="elderly">Elderly</string>
+
     <string-array name="fare_types">
-        <item>Adult</item>
-        <item>Student</item>
-        <item>Child</item>
-        <item>Elderly</item>
+        <item>@string/adult</item>
+        <item>@string/student</item>
+        <item>@string/child</item>
+        <item>@string/elderly</item>
     </string-array>
 
     <!-- untranslatable pref keys -->
