--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
 
     <!--> Options <-->
     <string name="action_settings">Settings</string>
+    <string name="about_us_option">About Us</string>
+    <string name="visit_website">Visit Our Website!</string>
 
     <!--> About Us <-->
     <string name="about_us">GlassByte is a software development start-up company headquartered in Dublin, Ireland. Our small, ambitious team strives to create innovative and useful software for computing platforms.</string>
@@ -11,7 +13,20 @@
 
     <!--> Settings <-->
     <string name="apache_title">Apache Licence</string>
+    <string name="apache_summary">Here\'s some information about how we distribute software.</string>
     <string name="apache_body">Copyright 2016 GlassByte Limited. Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
+
+    <string name="more_from_glassbyte">More from GlassByte</string>
+    <string name="personal">Personal</string>
+    <string name="language_options">Language Options</string>
+    <string name="more_apps">Find More of Our Apps</string>
+    <string name="click_here_for_more_apps">Click here to see more of our apps on Google Play.</string>
+    <string name="libraries_used">Libraries Used</string>
+    <string name="list_libraries_used">Here\'s a list of the libraries used by the developers.</string>
+    <string name="modify_name">Modify Name</string>
+    <string name="modify_fare">Modify Fare Type</string>
+    <string name="irish_language">Irish Language</string>
+    <string name="irish_language_summary">Choose this option to use this app with an Irish Gaelic interface.</string>
 
     <string name="adult">Adult</string>
     <string name="student">Student</string>
@@ -70,6 +85,10 @@
     <string name="fares_synced">Fares synced</string>
     <string name="using_cash">Using cash</string>
     <string name="positive_leapcard_drawer">This profile has a positive Leap balance</string>
+    <string name="relatime_info">Realtime Information</string>
+    <string name="manage_leap">Manage Leap Cards</string>
+    <string name="fare_calc">Fare Calculator</string>
+    <string name="expenditures">Expenditures</string>
 
     <!-- realtime fragment -->
     <string name="loading_stations">Loading stations…</string>
@@ -84,6 +103,19 @@
     <string name="tallaght_point">Tallaght-The Point Line</string>
     <string name="saggart_connolly">Saggart-Connolly Line</string>
     <string name="heuston_connolly">Heuston-Connolly Line</string>
+    <string name="terminus">Terminus:</string>
+    <string name="eta">"ETA: "</string>
+    <string name="origin">Origin:</string>
+    <string name="destination">Destination:</string>
+    <string name="no_departures_found">No departures found</string>
+    <string name="no_times_found">No times found</string>
+    <string name="unavailable_try_other_line">Unavailable, try other line</string>
+    <string name="unavailable">Unavailable</string>
+    <string name="arriving_soon">Arriving soon</string>
+    <string name="one_min_away">1 min away</string>
+    <string name="mins_away">" mins away"</string>
+    <string name="could_not_connect_real_time">Could not connect to real-time services. Check your internet connection.</string>
+    <string name="sometimes_rtpi_is_down">Sometimes RTPI.ie is down - our app depends on it to report times :(</string>
 
     <!-- manage leap fragment -->
     <string name="leap_added_successfully">Leap card added successfully</string>
@@ -115,6 +147,7 @@
     <string name="expenditure_added_successfully">Expenditure added successfully</string>
     <string name="no_active_leap">No Active Leap Card</string>
     <string name="no_active_leap_body">No active Leap card was detected, please activate one under settings. Click add if you wish to add this expense as a cash expenditure.\n\nThis will cost €</string>
+    <string name="more">"more."</string>
     <string name="cancel">Cancel</string>
 
     <!-- add leap card -->
@@ -178,5 +211,4 @@
     <string name="cookstown">Cookstown</string>
     <string name="hospital">Hospital</string>
     <string name="tallaght">Tallaght</string>
-
 </resources>
